2012-03-02  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.13.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.13.

2012-03-02  Lars Uebernickel <lars@uebernic.de>

	* spooler.c: When using CUPS support option strings (5th command
	  line argument to a CUPS filter) of more than 512 bytes. For PPD
	  files with very many options this string can get very long (Thanks
	  to Yoshito Nishihara, yoshito dot nishihara at nts dot ricoh dot co
	  dot jp for reporting this).

2012-02-10  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.12.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.12.

2012-02-10  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.11.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.11.

2012-02-10  Till Kamppeter <till.kamppeter@gmail.com>

	* foomaticrip.c: If incoming PDF needs to be converted to PostScript
	  due to the filter command line not being a standard Ghostscript
	  command line, no separate PDF command line being supplied, or
	  options in the PPD being implemented by PostScript code, use
	  preferrably Ghostscript (with the "ps2write" device) for this
	  conversion as Ghostscript is better optimized for printing and
	  has a more sophisticated color management compared to Poppler.

2012-02-10  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.10.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.10.

2011-08-18  Till Kamppeter <till.kamppeter@gmail.com>

	* foomaticrip.c, renderer.c: SECURITY FIX: Use the mktemp shell
	  command/mkstemp() function to create the debug log file and the
	  renderer input data file (both files only generated when
	  foomatic-rip is un in debug mode) with file names with an
	  unpredictable part. The names are /tmp/foomatic-rip-XXXXXX.log and
	  /tmp/foomatic-rip-YYYYYY.ps where the XXXXXX and YYYYYY are